--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -38,4 +38,4 @@ jobs:
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        password: pypi-AgEIcHlwaS5vcmcCJDM5Nzk4ZmViLThkMDUtNGVlZi05ZWZmLTdmOGEzNDMxOTA5NwACE1sxLFsibGF0aW5leC1zZGsiXV0AAixbMixbImJmYmVmZjIwLTAwODMtNDM3Mi1hMmI5LTQ0Nzg0MjJjZGNhOCJdXQAABiD4EtnxdL7CiXISyhHKVxb3Uqwj5quWUPFtZ7I7wPUKSA
